@@ -120,6 +120,12 @@ extern "C" {
 #define IPMI_FUJITSU_PRODUCT_ID_RX200S6             0x0262
 #define IPMI_FUJITSU_PRODUCT_ID_RX300S6             0x0263
 
+/******************************************* 
+ * HP                                      *
+ *******************************************/
+
+#define IPMI_HP_PRODUCT_ID_PROLIANT_DL160_G8 8192
+
 /*******************************************
  * Intel                                   *
  *******************************************/
