@@ -1,5 +1,6 @@
 FreeIPMI 1.2.6 - 02/26/13
 -------------------------
+o Support HP Proliant DL160 G8 OEM sensors.
 o Support Supermicro X9SCM-iiF OEM sensors and events.
 o Support output of temperature sampling period to ipmi-dcmi.
 o Clarify error message when SOL session cannot be stolen in
